--- a/SignApplication/Views/Setup/Index.cshtml
+++ b/SignApplication/Views/Setup/Index.cshtml
@@ -61,13 +61,13 @@
                 <h4 style="padding-bottom: 25px;" >Основные настройки</h4>
                 <div class="container">
                     <div class="input-group col-md-6 setup">
-                        <label type="text" class="form-control" aria-describedby="basic-addon1">Посылать нотификацию по окончании подписи</label>
+                        <label type="text" class="form-control" aria-describedby="basic-addon1">Посылать уведомление по окончании подписи</label>
                         <span class="input-group-addon">
                             <input type="checkbox">
                         </span>
                     </div>
                     <div class="input-group col-md-6 setup">
-                        <label type="text" class="form-control" aria-describedby="basic-addon1">Выбирите тип нотификации</label>
+                        <label type="text" class="form-control" aria-describedby="basic-addon1">Выбирите тип уведомлений</label>
                         <span class="input-group-addon">
                             <input type="checkbox">&nbsp;Email
                             &nbsp;
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="input-group col-md-6 setup">
-                        <label type="text" class="form-control" aria-describedby="basic-addon1">Добавлять водные знаки</label>
+                        <label type="text" class="form-control" aria-describedby="basic-addon1">Добавлять водяные знаки</label>
                         <span class="input-group-addon">
                             <input type="checkbox">
                         </span>
