--- a/SignApplication/Views/Info/Index.cshtml
+++ b/SignApplication/Views/Info/Index.cshtml
@@ -1,1 +1,7 @@
-﻿<h1>{{text}}</h1> 
+﻿<div class="contaiiner" ng-controller="infoController">
+    <div class="row">
+        <div class="col-md-6">
+            <canvas id="bar" class="chart chart-bar" data="ocw.data" labels="ocw.labels" colours="ocw.colours"></canvas>
+        </div>
+    </div>
+</div>
