--- a/SignApplication/Themes/Default/css/Site.css
+++ b/SignApplication/Themes/Default/css/Site.css
@@ -133,3 +133,8 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
     width: 100px;
     text-align: left;
 }
+
+.chart {
+    height: 200px;
+    width: 200px;
+}
