--- a/SignApplication/Views/Shared/_MasterLayout.cshtml
+++ b/SignApplication/Views/Shared/_MasterLayout.cshtml
@@ -25,6 +25,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
     @Scripts.Render("~/bundles/angular")
+    @Scripts.Render("~/bundles/angular-charts")
     @Scripts.Render("~/bundles/uibootstrap")
     <script src="https://code.angularjs.org/1.2.27/angular-animate.js"></script>
     <script src="https://code.angularjs.org/1.2.27/angular-route.js"></script>
