--- a/SignApplication/Views/Home/Index.cshtml
+++ b/SignApplication/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#">Запросы</a>
+                    <a href="#/requests">Запросы</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
