--- a/SignApplication/Views/Setup/Index.cshtml
+++ b/SignApplication/Views/Setup/Index.cshtml
@@ -55,6 +55,25 @@
                         <span class="input-group-addon parameter">Отчество</span>
                         <input type="text" class="form-control" placeholder="Введите отчество" aria-describedby="basic-addon1">
                     </div>
+                    <div class="input-group col-md-6 setup">
+                        <hr/>
+                    </div>
+                    <h4 style="padding-bottom: 25px;" >Изменить пароль</h4>
+                    <div class="input-group col-md-6 setup">
+                        <span class="input-group-addon parameter">Пароль</span>
+                        <input type="text" class="form-control" placeholder="Введите старый пароль" aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group col-md-6 setup">
+                        <span class="input-group-addon parameter">Пароль</span>
+                        <input type="text" class="form-control" placeholder="Введите новый пароль" aria-describedby="basic-addon1">
+                    </div>
+                    <div class="input-group col-md-6 setup">
+                        <span class="input-group-addon parameter">Пароль</span>
+                        <input type="text" class="form-control" placeholder="Введите новый пароль повторно" aria-describedby="basic-addon1">
+                        <span class="input-group-btn">
+                            <button class="btn btn-success" type="button">Сохранить</button>
+                        </span>
+                    </div>
                 </div>
             </div>
             <div ng-switch-when="general">
@@ -98,7 +117,7 @@
                         </span>
                     </div>
                     <div class="input-group col-md-6 setup">
-                        <label type="text" class="form-control" aria-describedby="basic-addon1">Переключаться на мобильную версию по возможности</label>
+                        <label type="text" class="form-control" aria-describedby="basic-addon1">Переключаться на мобильную версию при возможности</label>
                         <span class="input-group-addon">
                             <input type="checkbox">
                         </span>
