--- a/SignApplication/Themes/Default/css/Site.css
+++ b/SignApplication/Themes/Default/css/Site.css
@@ -138,3 +138,11 @@ input:focus:-ms-input-placeholder      {text-indent: 500px; transition: text-ind
     height: 200px;
     width: 200px;
 }
+
+.req {
+    background-color: #FFABAB;
+}
+
+.ng-dirty {
+    background-color: #BCFFAB;
+}
