--- a/SignApplication/Views/Documents/Edit.cshtml
+++ b/SignApplication/Views/Documents/Edit.cshtml
@@ -33,7 +33,7 @@
                 </tab-heading>
                 dsfsfds
             </tab>
-            <tab>
+            <tab active="true">
                 <tab-heading>
                     <i class="glyphicon glyphicon-info-sign"></i> Опции
                 </tab-heading>
